@@ -1,3 +1,5 @@
+08Jun99=======================================================================
+1. Started work on the curses based operator console.
 03Jun99=======================================================================
 1. cluster seems to have a memory leak, put DESTROY functions in where 
 appropriate.
